--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,9 @@ export(parasiteModel)
 export(simpleModel)
 export(speedModel)
 export(timeFromSunrise)
+import(MASS)
+import(nlme)
 import(suncalc)
+import(tcltk)
+import(utils)
+import(vioplot)
