--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: BcStats
 Title: Statistics for Bachelors in Martinkova-Smolinsky lab
-Version: 0.3.1
+Version: 0.3.2
 Authors@R: 
     person("Natalia", "Martinkova", , "martinkova@ivb.cz", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4556-4363"))
@@ -10,3 +10,9 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Imports: 
+    MASS,
+    nlme,
+    suncalc,
+    utils,
+    vioplot
